--- a/.github/workflows/tests-ngmix-upstream.yml
+++ b/.github/workflows/tests-ngmix-upstream.yml
@@ -11,7 +11,7 @@ jobs:
     name: tests-ngmix-upstream
     strategy:
       matrix:
-        pyver: ["3.9", "3.10"]
+        pyver: ["3.11"]
 
     runs-on: "ubuntu-latest"
 
