--- a/.github/workflows/lsst-tests.yml
+++ b/.github/workflows/lsst-tests.yml
@@ -52,4 +52,9 @@ jobs:
         shell: bash -l {0}
         run: |
           # we run metadetect/tests and metadetect/lsst/tests
-          pytest -v -n 4 --cov=metadetect --cov-report term-missing metadetect
+          pytest -v -n 4 --cov=metadetect --cov-report=xml --cov-report=term-missing --cov-branch metadetect
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
