--- a/.github/workflows/notification_trial.yml
+++ b/.github/workflows/notification_trial.yml
@@ -11,7 +11,7 @@ jobs:
       run: exit 1
   on-failure:
     runs-on: ubuntu-latest
-    if: ${{ always() && (needs.failing-job.result == 'failure' || needs.failing-job.result == 'timed_out') }}
+    if: ${{ (github.event.schedule || github.event.push) && needs.failing-job.result == 'failure' }}
     needs:
       - failing-job
     steps:
