--- a/.github/workflows/notification_trial.yml
+++ b/.github/workflows/notification_trial.yml
@@ -13,7 +13,7 @@ jobs:
       run: exit 1
   on-failure:
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name == 'schedule' || github.event_name == "push") && needs.failing-job.result == 'failure' }}
+    if: ${{ (github.event_name == 'schedule' || github.event_name == 'push') && needs.failing-job.result == 'failure' }}
     needs:
       - failing-job
     steps:
