--- a/.github/workflows/notification_trial.yml
+++ b/.github/workflows/notification_trial.yml
@@ -19,7 +19,7 @@ jobs:
       continue-on-error: true
   on-failure:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' && needs.failing-job.result == 'failure' }}
+    if: ${{ always() && needs.failing-job.result == 'failure' }}
     needs:
       - failing-job
     steps:
@@ -31,3 +31,5 @@ jobs:
         SLACK_FOOTER: ""
         SLACK_TITLE: LSST metadetect tests failing on lsst-dev
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+    - name: Announce event again
+      run: echo ${{ github.event_name == 'pull_request' && needs.failing-job.result == 'failure' }}
