--- a/.github/workflows/notification_trial.yml
+++ b/.github/workflows/notification_trial.yml
@@ -18,7 +18,7 @@ jobs:
       run: exit 1
   on-failure:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' && needs.failing-job.result == 'failure' }}
+    if: ${{ github.event_name == 'pull_request' }}
     needs:
       - failing-job
     steps:
