--- a/.github/workflows/notification_trial.yml
+++ b/.github/workflows/notification_trial.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
       env:
-        MSG_MINIMAL: actions_url
+        MSG_MINIMAL: actions url
         SLACK_FOOTER: ""
         SLACK_TITLE: LSST metadetect tests failing on lsst-dev
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
