--- a/.github/workflows/lsst-tests.yml
+++ b/.github/workflows/lsst-tests.yml
@@ -56,10 +56,11 @@ jobs:
           pytest -v -n 4 --cov=metadetect --cov-report=xml --cov-report=term-missing --cov-branch metadetect
 
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           files: ./coverage.xml
           fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   notify-on-failure:
     runs-on: ubuntu-latest
