--- a/.github/workflows/lsst-tests-ngmix-upstream.yml
+++ b/.github/workflows/lsst-tests-ngmix-upstream.yml
@@ -39,14 +39,13 @@ jobs:
           conda install --quiet --yes --file dev-requirements.txt
           conda install -q -y stackvana=0 lsstdesc-weaklensingdeblending
 
-          pip install git+https://github.com/arunkannawadi/ngmix@u/arunkannawadi/np2
           pip install --no-deps git+https://github.com/LSSTDESC/descwl-shear-sims.git
           pip install --no-deps git+https://github.com/LSSTDESC/descwl_coadd.git
 
           python -m pip install -e .
 
           conda uninstall ngmix --force -y
-          python -m pip install git+https://github.com/esheldon/ngmix.git
+          python -m pip install git+https://github.com/arunkannawadi/ngmix@u/arunkannawadi/np2
 
       - name: test
         shell: bash -l {0}
