--- a/.github/workflows/lsst-tests.yml
+++ b/.github/workflows/lsst-tests.yml
@@ -45,6 +45,9 @@ jobs:
 
           python -m pip install -e .
 
+          conda uninstall ngmix --force -y
+          python -m pip install git+https://github.com/arunkannawadi/ngmix@u/arunkannawadi/np2
+
       - name: test ngmix w/ conda latest
         shell: bash -l {0}
         run: |
