--- a/.github/workflows/lsst-tests.yml
+++ b/.github/workflows/lsst-tests.yml
@@ -45,7 +45,7 @@ jobs:
 
           python -m pip install -e .
 
-          conda uninstall ngmix --force -y
+          # conda uninstall ngmix --force -y
           python -m pip install git+https://github.com/arunkannawadi/ngmix@u/arunkannawadi/np2
 
       - name: test ngmix w/ conda latest
